host Page hinzugefügt

--- a/NetMonitor.Webapp/Pages/Index.cshtml
+++ b/NetMonitor.Webapp/Pages/Index.cshtml
@@ -1,10 +1,31 @@
 ﻿@page
 @model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-}
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h3>Aktive Monitor Instanzen</h3>
+
+<table class="table table-sm table-striped" >
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Hosts</th>
+        <th>Guid</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var m in Model.MonitorInstances)
+    {
+        <tr>
+            <td>@m.Id</td>
+            <td>@m.Name</td>
+            <td>
+               @foreach (var h in m.Hosts)
+               {
+                   <a asp-page="/Hosts" asp-route-guid="@h.Guid">@h.Hostname</a>
+               }
+            </td>
+            <td>@m.Guid</td>
+        </tr>
+    }
+    </tbody>
+</table>
