--- a/NetMonitor.Webapp/Pages/Hosts.cshtml
+++ b/NetMonitor.Webapp/Pages/Hosts.cshtml
@@ -14,16 +14,39 @@
     </thead>
     <tbody>
     <td> @Model.Host.Hostname</td>
-    <td> @Model.Host.Description.description</td>
+    <td> @Model.Host.Description</td>
     <td> @Model.Host.IPAddress</td>
     </tbody>
 </table>
 <h6>Long description</h6>
-<p>@Model.Host.Description.longdescription</p>
+<p>@Model.Host.Description</p>
 <h3>Services</h3>
-<p>Number of services running on <i>@Model.Host.Hostname</i>: @Model.Host.ServicesInUse.Count</p>
-<hr/>
-@foreach (var s in Model.Host.ServicesInUse)
-{
-    <p>s.</p>
-}
+<p>Number of services running on <i>@Model.Host.Hostname</i>: @Model.Host.Services.Count</p>
+
+<table class="table table-sm">
+    <thead>
+    <tr>
+        <th>Service</th>
+        <th>Description</th>
+        <th>Interval</th>
+        <th>Retry Interval</th>
+        <th>Service Type</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var s in Model.Host.Services)
+    {
+        <tr>
+            <td> @s.Description.</td>
+            <td> @s.LongDescription</td>
+            <td> @s.NormalInterval seconds</td>
+            <td> @s.RetryInterval seconds</td>
+            <td> @s.ServiceType</td>
+            <td><a asp-page="/Services" asp-route-guid=""><i class="fa-solid fa-circle-info fa-lg"></i></a></td>
+        </tr>
+    }
+
+
+    </tbody>
+</table>
