--- a/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
+++ b/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/NetMonitor.Webapp.styles.css" asp-append-version="true"/>
+    <script src="~/lib/fontawesome5/all.min.js"></script>
+
 </head>
 <body>
 <header>
@@ -38,7 +40,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - NetMonitor - Paul Herbich 
+        &copy; 2023 - NetMonitor - Paul Herbich
     </div>
 </footer>
 
