--- a/NetMonitor.Webapp/Pages/Hosts.cshtml
+++ b/NetMonitor.Webapp/Pages/Hosts.cshtml
@@ -1,55 +1,52 @@
 @page "{guid}"
 @model NetMonitor.Webapp.Pages.Hosts
 
-
 <h3>Informationen zu Host: @Model.Host.Hostname</h3>
-<button type="button" onclick="EditMode()" class="btn btn-outline-dark editBtn"><i class="fa fa-edit"></i> Edit Host</button>
-<form method="post">
-<button type="submit" hidden onclick="FinishEditMode()" class="btn btn-outline-success finishBtn"><i class="fa-solid fa-check"></i> Finish Editing</button>
+<button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-dark editBtn">
+    <i class="fa fa-edit"></i> Edit Host
+</button>
+<form method="post" asp-page-handler="edit">
 
-<table class="table table-sm">
-    <thead>
-    <tr>
-        <th>Hostname</th>
-        <th>Description</th>
-        <th>IP-Adress</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    
-    <td>
-        <span class="nonEdit"> @Model.Host.Hostname </span>
-        <span class="edit" hidden>
-            <input asp-for="Host.Hostname" />
-        </span>
-    </td>
+    <button type="submit" onclick="toggleMode()" class="edit btn btn-outline-success finishBtn">
+        <i class="fa-solid fa-check"></i> Finish Editing
+    </button>
 
-    <td>
-        <span class="nonEdit"> @Model.Host.Description </span>
-        <span class="edit" hidden>
-            <input asp-for="Host.Description" class="w-75"/>
-        </span>
-    </td>
-    <td>
-        <span class="nonEdit"> @Model.Host.IPAddress </span>
-        <span class="edit" hidden>
-            <input asp-for="Host.IPAddress"  class="w-50"/>
-        </span>
-    </td>
-    
-
-    <td>
-
-    </td>
-    </tbody>
-</table>
+    <table class="table table-sm">
+        <thead>
+        <tr>
+            <th>Hostname</th> <th>Description</th> <th>IP-Adress</th> <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <td>
+            <span class="nonEdit"> @Model.Host.Hostname </span>
+            <span class="edit">
+                <input asp-for="Host.Hostname"/>
+            </span>
+        </td>
+        <td>
+            <span class="nonEdit"> @Model.Host.Description </span>
+            <span class="edit">
+                <input asp-for="Host.Description" class="w-75"/>
+            </span>
+        </td>
+        <td>
+            <span class="nonEdit"> @Model.Host.IPAddress </span>
+            <span class="edit">
+                <input asp-for="Host.IPAddress" class="w-50"/>
+            </span>
+        </td> <td> </td>
+        </tbody>
+    </table>
+    <div asp-validation-summary=All></div> <!-- is used to render a summary of form validation error messages.  -->
 </form>
-<b>Long description</b>
-<p>@Model.Host.Description</p>
+@if (Model.Host.LongDescription.Length > 0)
+{
+    <b>Long description</b>
+    <p>@Model.Host.LongDescription</p>
+}
 <h3>Services</h3>
 <p>Number of services running on <i>@Model.Host.Hostname</i>: @Model.Host.Services.Count</p>
-
 <table class="table table-sm">
     <thead>
     <tr>
@@ -77,36 +74,17 @@
             </td>
         </tr>
     }
-
-
     </tbody>
 </table>
 
-
-@section Scripts
-{
-    <script>
-    function EditMode() {
-        [].forEach.call(document.querySelectorAll('.nonEdit'), function (el) {
-            el.hidden=!el.hidden;
-         });
-        [].forEach.call(document.querySelectorAll('.edit'), function (el) {
-            el.hidden=!el.hidden;
-        });
-        document.querySelector('.editBtn').hidden=true;
-        document.querySelector('.finishBtn').hidden=false;
-
+@section Scripts {
+    <script> 
+    let edit = window.location.href.indexOf("handler=edit") != -1; 
+    function toggleMode() { edit = !edit; setDisplay(); } 
+    function setDisplay() { 
+        for (const el of document.querySelectorAll('.nonEdit')) el.hidden = edit; 
+        for (const el of document.querySelectorAll('.edit')) el.hidden = !edit; 
     }
-    function FinishEditMode(){
-        [].forEach.call(document.querySelectorAll('.nonEdit'), function (el) {
-            el.hidden=!el.hidden;
-         });
-        [].forEach.call(document.querySelectorAll('.edit'), function (el) {
-            el.hidden=!el.hidden;
-        });
-        document.querySelector('.editBtn').hidden=false;
-        document.querySelector('.finishBtn').hidden=true;
-    }
-
- </script>
+    setDisplay(); 
+    </script>
 }
