--- a/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
+++ b/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/allHosts/Index">Hosts</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/allServices/Index">Services</a>
+                    </li>
                 </ul>
             </div>
         </div>
