--- a/NetMonitor.Webapp/Pages/Index.cshtml
+++ b/NetMonitor.Webapp/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 
-<h3>Aktive Monitor Instanzen</h3>
+<h3>Active Monitor Instances</h3>
 
 <table class="table table-sm table-striped">
     <thead>
