--- a/NetMonitor.Webapp/Pages/allHosts/index.cshtml
+++ b/NetMonitor.Webapp/Pages/allHosts/index.cshtml
@@ -79,7 +79,7 @@
     <td>
         <a asp-page="/Hosts" asp-route-guid="@h.Guid">
 
-        <i class="fa-solid fa-circle-info"></i>
+        <button type="button" class="btn btn-outline-info"><i class="fa-solid fa-circle-info fa-lg"></i></button>
         </a>
     </td>
 </tr>
