started with import

--- a/NetMonitor.Webapp/Pages/Hosts.cshtml
+++ b/NetMonitor.Webapp/Pages/Hosts.cshtml
@@ -9,7 +9,7 @@
     </style>
 }
 
-<h3>Informationen zu Host: @Model.Host.Hostname</h3>
+<h3>Information for Host: @Model.Host.Hostname</h3>
 <form method="post">
     <button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-dark editBtn"> <i class="fa fa-edit"></i> Edit Host </button>
     <button type="submit" asp-page-handler="edit" class="edit btn btn-outline-success finishBtn"> <i class="fa-solid fa-check"></i> Finish Editing </button>
