--- a/NetMonitor.Webapp/Pages/allHosts/index.cshtml
+++ b/NetMonitor.Webapp/Pages/allHosts/index.cshtml
@@ -16,76 +16,114 @@
     .tr:hover{background-color: lightgrey}
     .td-desclong{width: 45%;}
     .validation span{color: red;}
-    </style>
+    </style> 
 
 }
 
 <h3>All Hosts</h3>
-<button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-success"> <i class="fa-solid fa-plus"></i> Create New Host </button>
-<form method="post">
-
-<button type="submit" asp-page-handler="add" onclick="toggleMode()" class="edit btn btn-outline-success"> <i class="fa-solid fa-check"></i> Finish </button>
-<button type="reset" onclick="toggleMode()" class="edit btn btn-outline-danger"> <i class="fa-solid fa-rectangle-xmark"></i> Cancel </button>
-<table class="table table-sm">
-<thead>
-<tr>
-    <th>Name</th>
-    <th>IP-Address</th>
-    <th>Description</th>
-    <th>Long Description</th>
-    <th></th>
-</tr>
-</thead>
-<tbody>
-
-<tr class="edit">
-    <td class="td-name">
-        <input asp-for="Host.Hostname"/>
-        <div class="validation">
-            <span asp-validation-for="Host.Hostname"></span>
-        </div>
-    </td>
-    <td class="td-ip">
-        <input asp-for="Host.IPAddress"/>
-        <div class="validation">
-            <span asp-validation-for="Host.IPAddress"></span>
-        </div>
-
-    </td>
-    <td class="td-desc">
-        <input asp-for="Host.Description"/>
-        <div class="validation">
-            <span asp-validation-for="Host.Description"></span>
-        </div>
-    </td>
-    <td class="td-desclong">
-        <input asp-for="Host.LongDescription"/>
-        <div class="validation">
-            <span asp-validation-for="Host.LongDescription"></span>
-        </div>
-    </td>
-
-</tr>
-
-@foreach (var h in Model.Hosts)
-            {
-    
-
-<tr class="tr">
-    <td class="td-name"> @h.Hostname</td>
-    <td class="td-ip"> @h.IPAddress</td>
-    <td class="td-desc"> @h.Description</td>
-    <td class="td-desclong"> @h.LongDescription</td>
-    <td>
-        <a asp-page="/Hosts" asp-route-guid="@h.Guid">
-
-        <button type="button" class="btn btn-outline-info"><i class="fa-solid fa-circle-info fa-lg"></i></button>
-        </a>
-    </td>
-</tr>
-
+@if (!string.IsNullOrEmpty(Model.ErrorMessage))
+{
+    <div class="border border-3 border-danger p-3">
+        <p class="mb-0">@Model.ErrorMessage</p>
+    </div>
 }
-</tbody>
+@if (!string.IsNullOrEmpty(Model.Message))
+{
+    <div class="border border-3 p-3 border-info">
+        <p class="mb-0">@Model.Message</p>
+    </div>
+}
+
+<div class="card mb-4 mt-4">
+    <div class="card-body">
+        <h5 class="card-title">CSV laden</h5>
+        <p class="card-text">
+            Lade eine CSV Datei mit folgender Überschriftszeile hoch:
+            EAN&rarr;Produkt&rarr;Kategorie&rarr;UVP&rarr;LieferbarAb<br />
+            Encoding: UTF 8 (ohne BOM), Trennzeichen: TAB, Zeilenumbrüche: CR+LF
+        </p>
+        <form method="post" enctype="multipart/form-data" asp-page-handler="CsvImport">
+            <input class="form-control" type="file" asp-for="UploadedFile">
+            <button type="submit" class="mt-3 btn btn-primary">Upload</button>
+        </form>
+    </div>
+</div>
+
+
+<button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-success"> <i class="fa-solid fa-plus"></i> Create New Host </button>
+<form method="post"> 
+
+    <button type="submit" asp-page-handler="add" onclick="toggleMode()" class="edit btn btn-outline-success"> <i class="fa-solid fa-check"></i> Finish </button>
+    <button type="reset" onclick="toggleMode()" class="edit btn btn-outline-danger"> <i class="fa-solid fa-rectangle-xmark"></i> Cancel </button>
+    <table class="table table-sm">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>IP-Address</th>
+            <th>Description</th>
+            <th>Long Description</th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+
+        <tr class="edit">
+            <td class="td-name">
+                <input asp-for="Host.Hostname"/>
+                <div class="validation">
+                    <span asp-validation-for="Host.Hostname"></span>
+                </div>
+            </td>
+            <td class="td-ip">
+                <input asp-for="Host.IPAddress"/>
+                <div class="validation">
+                    <span asp-validation-for="Host.IPAddress"></span>
+                </div>
+
+            </td>
+            <td class="td-desc">
+                <input asp-for="Host.Description"/>
+                <div class="validation">
+                    <span asp-validation-for="Host.Description"></span>
+                </div>
+            </td>
+            <td class="td-desclong">
+                <input asp-for="Host.LongDescription"/>
+                <div class="validation">
+                    <span asp-validation-for="Host.LongDescription"></span>
+                </div>
+            </td>
+
+
+        </tr>
+
+        @foreach (var h in Model.Hosts)
+        {
+            <tr class="tr">
+                <td class="td-name"> @h.Hostname</td>
+                <td class="td-ip"> @h.IPAddress</td>
+                <td class="td-desc"> @h.Description</td>
+                <td class="td-desclong"> @h.LongDescription</td>
+                <td>
+                    <a asp-page="/Hosts" asp-route-guid="@h.Guid">
+
+                        <button type="button" class="btn btn-outline-info">
+                            <i class="fa-solid fa-circle-info fa-lg"></i>
+                        </button>
+                    </a>
+                </td>
+                <td class="text-center">
+                    <form method="post" asp-page-handler="DeleteHost">
+                        <input type="hidden" name="guid" value="@h.Guid"/>
+                        <button type="submit" class="btn btn-outline-danger">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </form>
+                </td>
+            </tr>
+        }
+        </tbody>
     </table>
 </form>
 
