Upload/import fertig

--- a/NetMonitor.Webapp/Pages/allHosts/index.cshtml
+++ b/NetMonitor.Webapp/Pages/allHosts/index.cshtml
@@ -47,7 +47,7 @@
                         <h5 class="card-title">Excelsheet laden</h5>
                         <p class="card-text">
                             Lade eine Exceldatei mit folgender Überschriftszeile hoch:
-                            EAN&rarr;Produkt&rarr;Kategorie&rarr;UVP&rarr;LieferbarAb
+                            Hostname&rarr;IPAddress&rarr;DescriptionShort&rarr;DescriptionLong
                         </p>
                         <form method="post" enctype="multipart/form-data" asp-page-handler="ExcelImport">
                             <input class="form-control" type="file" asp-for="UploadedFile">
