--- a/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
+++ b/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject NetMonitor.Webapp.Services.AuthService AuthService
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -30,7 +32,17 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/allServices/Index">Services</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/User/Login">Login</a>
+                    </li>
                 </ul>
+                <div>
+                    @if (AuthService.IsAuthenticated)
+                    {
+                        <p>Angemeldet als @AuthService.Username
+                        <small class="ms"><a asp-page="/User/Logout">Logout <i class="fa-solid fa-right-from-bracket"></i></a></small></p>
+                    }
+                </div>
             </div>
         </div>
     </nav>
