On delete no action fixed

--- a/NetMonitor.Webapp/Pages/Hosts.cshtml
+++ b/NetMonitor.Webapp/Pages/Hosts.cshtml
@@ -75,6 +75,11 @@
         </div>
     </div>
 </form>
+<form method="post" asp-page-handler="RemoveAllServices">
+        <div class="mt-4 mb-4">
+            <button type="submit" class="btn btn-outline-danger">Remove all services</button>
+        </div>
+</form>
 <table class="table table-sm align-middle">
     <thead>
     <tr>
