--- a/NetMonitor.Webapp/Pages/User/Register.cshtml
+++ b/NetMonitor.Webapp/Pages/User/Register.cshtml
@@ -1,9 +1,9 @@
 @page
-@model NetMonitor.Webapp.Pages.User.Login
+@model NetMonitor.Webapp.Pages.User.Register
 
 <div class="d-sm-table" style="border-spacing: 0px 10px">
     <div>
-        <h3>Login</h3>
+        <h3>Register</h3>
     </div>
 
     <form method="post">
@@ -22,16 +22,6 @@
             </div>
         </div>
 
-        <div class="d-sm-table-row">
-            <div class="d-sm-table-cell"></div>
-            <div class="d-sm-table-cell">
-                @if (Model.IsDevelopment)
-                {
-                        <small>Hinweis: Im Development Mode ist der User admin mit jedem Passwort mit mindestens 3 Stellen gültig.</small>
-                }
-            </div>
-        </div>
-
         @if (!string.IsNullOrEmpty(Model.Message))
         {
             <div class="mt-3">
@@ -40,8 +30,7 @@
         }
 
         <div class="mt-3">
-            <button class="btn btn-primary">Login</button>
-            <a asp-page="Register">Register</a>
+            <button class="btn btn-primary">Register</button>
         </div>
     </form>
 </div>
