--- a/NetMonitor.Webapp/Pages/Hosts.cshtml
+++ b/NetMonitor.Webapp/Pages/Hosts.cshtml
@@ -13,7 +13,30 @@
 <form method="post">
     <button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-dark editBtn"> <i class="fa fa-edit"></i> Edit Host </button>
     <button type="submit" asp-page-handler="edit" class="edit btn btn-outline-success finishBtn"> <i class="fa-solid fa-check"></i> Finish Editing </button>
-    <button type="submit" asp-page-handler="delete" class="btn btn-outline-danger edit">Delete <b> @Model.Host.Hostname </b></button>
+
+    <!-- Popup Modal -->
+    <button type="button" class="btn btn-outline-danger edit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Delete <b> @Model.Host.Hostname </b>
+    </button>
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Delete @Model.Host.Hostname</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"> </button>
+                </div>
+                <div class="modal-body">
+                    Do you really want to delete @Model.Host.Hostname. This can not be undone.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" asp-page-handler="delete" class="btn btn-outline-danger edit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        Delete <b> @Model.Host.Hostname </b>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="hostdetails">
         <div class="cell">
@@ -73,12 +96,15 @@
         <div class="col-3">
             <button type="submit" class="btn btn-outline-success">Add service</button>
         </div>
+        <div class="col-5"></div>
     </div>
 </form>
+
+
 <form method="post" asp-page-handler="RemoveAllServices">
-        <div class="mt-4 mb-4">
-            <button type="submit" class="btn btn-outline-danger">Remove all services</button>
-        </div>
+    <div class="mt-4 mb-4">
+        <button type="submit" class="btn btn-outline-danger">Remove all services</button>
+    </div>
 </form>
 <table class="table table-sm align-middle">
     <thead>
@@ -103,14 +129,18 @@
             <td> @s.ServiceType</td>
             <td class="text-center">
                 <a asp-page="/Services" asp-route-guid="@s.Guid">
-                    
-                    <button type="button" class="btn btn-outline-info"><i class="fa-solid fa-circle-info fa-lg"></i></button>
+
+                    <button type="button" class="btn btn-outline-info">
+                        <i class="fa-solid fa-circle-info fa-lg"></i>
+                    </button>
                 </a>
             </td>
             <td class="text-center">
                 <form method="post" asp-page-handler="RemoveService">
                     <input type="hidden" name="guid" value="@s.Guid"/>
-                    <button type="submit" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></button>
+                    <button type="submit" class="btn btn-outline-danger">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
                 </form>
             </td>
         </tr>
