--- a/NetMonitor.Webapp/Pages/User/Profile.cshtml
+++ b/NetMonitor.Webapp/Pages/User/Profile.cshtml
@@ -13,11 +13,15 @@
                 <div class="card-header">Profile Picture</div>
                 <div class="card-body text-center">
                     <!-- Profile picture image-->
-                    <img class="img-account-profile rounded-circle mb-2" src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                    <img class="img-account-profile rounded-circle mb-2 w-25" src="data:image/png;base64,@Model.UploadedFileData" alt=""/>
+
                     <!-- Profile picture help block-->
                     <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
-                    <button class="btn btn-primary" type="button">Upload new image</button>
+                    <form method="post" enctype="multipart/form-data" asp-page-handler="ImageImport">
+                        <input class="form-control" type="file" asp-for="UploadedFile">
+                        <button type="submit" class="mt-3 btn btn-primary">Upload a new Image</button>
+                    </form>
                 </div>
             </div>
         </div>
