--- a/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
+++ b/NetMonitor.Webapp/Pages/Shared/_Layout.cshtml
@@ -36,17 +36,27 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/User/Login">Login</a>
                     </li>
                 </ul>
-                <div class="">
+                <div class="shadow ps-4 pe-4 align-middle">
                     @if (AuthService.IsAuthenticated)
                     {
-                        <p>
-                            <a asp-page="User/Profile" class="text-black font-weight-bold">
-                                <img style="width:80px" class="rounded-circle me-3" src="data:image/png;base64,@_db.Users.FirstOrDefault(u => u.Username == AuthService.Username).ImageData"/>
+                        <p class="m-1">
+                            <span style="font-weight: 600; margin-right: 10px">@AuthService.Username</span>
 
-                                @Html.Raw("@")@AuthService.Username
+                            <a asp-page="User/Profile" class="text-black text-decoration-none">
+                                @if (_db.Users.FirstOrDefault(u => u.Username == AuthService.Username).ImageData is not null)
+                                {
+                                    <img style="width:60px" class="rounded-circle me-3" src="data:image/png;base64,@_db.Users.FirstOrDefault(u => u.Username == AuthService.Username).ImageData"/>
+                                }
+                                else
+                                {
+                                    <img style="width:60px" class="rounded-circle me-3" src="https://thumbs.dreamstime.com/b/default-avatar-profile-icon-vector-unknown-social-media-user-photo-default-avatar-profile-icon-vector-unknown-social-media-user-184816085.jpg"/>
+                                }
+        
                             </a>
-                            <small class="ms">
-                                <a asp-page="/User/Logout">
+                            |
+                            <small class="ms-4">
+                                
+                                <a asp-page="/User/Logout" class="text-black">
                                     <i class="fa-solid fa-right-from-bracket"></i>
                                 </a>
                             </small>
