--- a/NetMonitor.Webapp/Pages/User/Profile.cshtml
+++ b/NetMonitor.Webapp/Pages/User/Profile.cshtml
@@ -28,7 +28,7 @@
                     <div class="small font-italic text-muted mb-4">PNG no larger than 5 MB</div>
                     <!-- Profile picture upload button-->
                     <form method="post" enctype="multipart/form-data" asp-page-handler="ImageImport">
-                        <input class="form-control" type="file" asp-for="UploadedFile">
+                        <input class="form-control" type="file" asp-for="UploadedFile" required="required">
                         <button type="submit" class="mt-3 btn btn-primary">Upload a new Image</button>
                     </form>
                 </div>
