--- a/NetMonitor.Webapp/Pages/allServices/Index.cshtml
+++ b/NetMonitor.Webapp/Pages/allServices/Index.cshtml
@@ -16,10 +16,10 @@
 
 <h3>All Services</h3>
 <button type="button" onclick="toggleMode()" class="nonEdit btn btn-outline-success"> <i class="fa-solid fa-plus"></i> Create New Service </button>
-<form method="post" >
+<form method="post">
 
-<button type="submit" asp-page-handler="add" onclick="toggleMode()" class="edit btn btn-outline-success"> <i class="fa-solid fa-check"></i> Finish </button>
-<button type="reset" onclick="toggleMode()" class="edit btn btn-outline-danger"> <i class="fa-solid fa-rectangle-xmark"></i> Cancel </button>
+    <button type="submit" asp-page-handler="add" onclick="toggleMode()" class="edit btn btn-outline-success"> <i class="fa-solid fa-check"></i> Finish </button>
+    <button type="reset" onclick="toggleMode()" class="edit btn btn-outline-danger"> <i class="fa-solid fa-rectangle-xmark"></i> Cancel </button>
     <table class="table table-sm">
         <thead>
         <tr>
@@ -27,6 +27,7 @@
             <th>NormalInterval</th>
             <th>RetryInterval</th>
             <th>LongDescription</th>
+            <th>Save</th>
         </tr>
         </thead>
         <tbody>
@@ -61,9 +62,16 @@
         {
             <tr class="tr">
                 <td class="td-desc">@s.Description</td>
-                <td class="td-inter">@s.NormalInterval</td>
-                <td class="td-inter">@s.RetryInterval</td>
+                <td class="td-inter">
+                    <input asp-for="EditServices[s.Guid].NormalInterval"/>
+                </td>
+                <td class="td-inter">
+                    <input asp-for="EditServices[s.Guid].RetryInterval"/>
+                </td>
                 <td class="td-longDesc">@s.LongDescription</td>
+                <td>
+                    <button asp-page-handler="EditService" type="submit" class="btn btn-dark" asp-route-serviceGuid="@s.Guid">Save</button>
+                </td>
             </tr>
         }
         </tbody>
